# MemGPT

./: .dockerignore  .env.example  .gitattributes  .gitignore  .gitpod.yml  .pre-commit-config.yaml  CITATION.cff  CONTRIBUTING.md  CONTRIBUTION.md  Dockerfile  LICENSE  MemGPT.code-workspace  PRIVACY.md  README.md  SECURITY.md  TERMS.md  alembic.ini  app.py  compose.yaml  config.py  convert_mquake_to_explicit_format.py  dev-compose.yaml  development.compose.yml  docker-compose-ollama.yaml  docker-compose-vllm.yaml  evaluate_fact_edit.py  evaluate_gsm8k.py  fact_edit_baseline.py  fly.toml  index.html  init.sql  interface.py  justfile  locust_test.py  main.py  main_db.py  mkdocs.yml  nginx.conf  openapi_assistants.json  openapi_letta.json  (+11 more)
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: autoflake_format.yml  black_format.yml  check_for_new_prints.yml  code_style_checks.yml  docker-image-nightly.yml  docker-image.yml  docker-integration-tests.yaml  fly-deploy.yml  integration_tests.yml  isort_format.yml  jekyll-gh-pages.yml  letta-web-openapi-saftey.yml  letta-web-safety.yml  main.yml  manually_clear_old_issues.yml  migration-test.yml  poetry-publish-nightly.yml  poetry-publish.yml  pyright_types.yml  python-app.yml  rdme-docs.yml  rdme-openapi.yml  release_dmg.yml  sarah-test.yml  semantic-prs.yml  test-pip-install.yml  test_anthropic.yml  test_azure.yml  test_cli.yml  test_endpoints.yml  test_examples.yml  test_groq.yml  test_local.yml  test_memgpt_hosted.yml  test_ollama.yml  test_openai.yml  test_together.yml  tests.yml  warn_poetry_updates.yml
alembic/: env.py
assets/img/: demo.cast  (+2 more)
certs/: README.md  localhost-key.pem  localhost.pem
chatui/: .editorconfig  .eslintrc.base.json  .eslintrc.json  .prettierignore  .prettierrc  README.md  components.json  index.html  jest.config.ts  nx.json  package-lock.json  package.json  pnpm-lock.yaml  postcss.config.js  project.json  tailwind.config.js  tsconfig.app.json  tsconfig.base.json  tsconfig.json  tsconfig.spec.json  vite.config.ts
configs/: memgpt_hosted.json  openai.json  server_config.yaml
db/: Dockerfile.simple  run_postgres.sh
docs/: .markdownlint.json  README.md  adding_wrappers.md  api.md  autogen.md  cli_faq.md  config.md  contributing.md  contributing_code.md  contributing_docs.md  data_sources.md  discord_bot.md  embedding_endpoints.md  endpoints.md  example_chat.md  example_data.md  examples.md  functions.md  generate_docs.py  index.md  koboldcpp.md  llamacpp.md  lmstudio.md  local_llm.md  local_llm_faq.md  local_llm_settings.md  mkdocs.yml  ollama.md  presets.md  python_client.md  quickstart.md  requirements.txt  storage.md  vllm.md  webui.md  webui_runpod.md
examples/: Building agents with Letta.ipynb  composio_tool_usage.py  crewai_tool_usage.py  google_search.py  google_search_preset.yaml  helper.py  langchain_tool_usage.py  langchain_tools.py  memgpt_client.py  memgpt_local_client.py  memgpt_rest_client.py  openai_client_assistants.py  tool_rule_usage.py
fact_edit_experiments/: README.md  convert_mquake_to_explicit_format.py  evaluate_fact_edit.py  generate_gsm8k_memory.py  run_fact_editing.py  run_gsm8k.py  run_tree_example.py  tree_example.py
frontend/: .env.template  .eslintignore  .eslintrc.json  LICENSE  README.md  components.json  next.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
gsm8k_experiments/: generate_prompt.py  gsm8k-cot.yaml
helm/: README.md
installable_apps/: cutelog_overload.py  dmg_packager.sh  installable_image.py  installable_logger.py  letta.spec  logviewer.py  macos.spec  pyinstaller_macos_exec.sh  requirements.txt  server.py  setup.py  startup.py  tray.py
letta/: __init__.py  agent.py  chat_only_agent.py  config.py  constants.py  credentials.py  embeddings.py  errors.py  interface.py  log.py  main.py  memory.py  metadata.py  o1_agent.py  offline_memory_agent.py  persistence_manager.py  providers.py  settings.py  split_thread_agent.py  streaming_interface.py  streaming_utils.py  swarm.py  system.py  utils.py
memgpt/: __init__.py  __main__.py  agent.py  agent_base.py  alembic.ini  config.py  constants.py  credentials.py  data_types.py  db_utils.py  embeddings.py  errors.py  interface.py  llm_api_tools.py  log.py  main.py  memgptlog.py  memory.py  metadata.py  migrate.py  openai_tools.py  persistence_db.py  persistence_manager.py  presets.py  server.py  settings.py  split_thread_agent.py  streaming_interface.py  system.py  utils.py  webserver.py
memgpt-frontend/: .eslintrc.json  .prettierrc  components.json  index.html  nx.json  package-lock.json  package.json  project.json  tailwind.config.js  tsconfig.app.json  tsconfig.base.json  tsconfig.json  vite.config.ts
paper_experiments/: README.md  utils.py
pymemgpt/: README.md  setup.py
scripts/: migrate_0.3.17.py  migrate_0.3.18.py  migrate_embedding_dimesions.py  migrate_tools.py  pack_docker.sh  wait_for_service.sh
supabase/: config.toml
telmem/: archival.py  attach_source.py  config.py  db.py  get_a.py  get_sources.py  get_users.py  memgpt.py  memtest.py  persona.py  send_message.py  source.py  supatest.py  tg.py
tests/: __init__.py  clear_postgres_db.py  config.py  conftest.py  constants.py  db_setup.sql  integration_test_agent_tool_graph.py  integration_test_base_tools.py  integration_test_o1_agent.py  integration_test_offline_memory_agent.py  integration_test_summarizer.py  integration_test_tool_execution_sandbox.py  pytest.ini  test_admin_client.py  test_agent_config.py  test_agent_function_update.py  test_agent_tool_graph.py  test_agent_type.py  test_autogen_integration.py  test_base_functions.py  test_cli.py  test_client.py  test_client_legacy.py  test_concurrent_connections.py  test_credentials.py  test_different_embedding_size.py  test_endpoints.py  test_function_parser.py  test_json_parsers.py  test_load_archival.py  test_local_client.py  test_local_client_cli.py  test_local_load.py  test_log.py  test_managers.py  test_medata_store.py  test_memory.py  test_metadata_store.py  test_migrate.py  test_model_letta_perfomance.py  (+32 more)
(+1817 files in other folders)
